<resources>
    <string name="facebook_app_id">418806965160524</string>
    <string name="fb_login_protocol_scheme">fb418806965160524</string>

    <string name="app_name">LITMUS</string>

    <!--네트워크-->

    <string name="text_network_error">네트워크에 접속할 수 없습니다.</string>
    <string name="text_network_error_guide">네트워크 연결 상태를 확인해 주세요.</string>
    <string name="text_network_error_create">이미 평가 진행중인 앱입니다.</string>


    <!--로그인-->

    <string name="text_app_explanation">mobile app review service</string>
    <string name="text_login_explanation">원할한 서비스 이용을 위해 로그인이 필요합니다</string>
    <string name="text_4ground_team_project">team fourground. 1st Project</string>

    <!--상세화면-->
    <string name="text_empty_review">아직 작성된 리뷰가 없습니다</string>

    <!--앱 리스트-->
    <string name="text_appraisal_evaluating">평가중</string>
    <string name="text_appraisal_end">평가종료</string>

    <!--앱 등록-->
    <string name="text_name">이름</string>
    <string name="text_hint_input_name">서비스 이름을 입력하세요.</string>
    <string name="text_error_input_name">서비스 이름은 필수 입니다.</string>
    <string name="text_hint_input_url">Google Play URL을 입력하세요.</string>
    <string name="text_error_store_url">URL이 올바르지 않습니다. Google Play 에서 공유 URL을 복사 후 넣어주세요</string>
    <string name="text_device_os">Device OS</string>
    <string name="text_device_andorid">Android</string>
    <string name="text_device_ios">IOS</string>
    <string name="text_review_date">리뷰기간</string>
    <string name="text_service_explanation">서비스 설명 (200자 내) - 선택</string>
    <string name="text_hint_service_concept">서비스 컨셉을 간략하게 써주세요</string>
    <string name="text_register_service_complete">서비스가 정상적으로 등록되었습니다</string>

    <!--리뷰 쓰기-->

    <string name="text_used">예전 또는 현재 사용한 적 있다</string>
    <string name="text_first_time">처음 사용해봤다</string>

    <string name="text_design">디자인</string>
    <string name="text_useful">사용성</string>
    <string name="text_contents">콘텐츠</string>
    <string name="text_satisfaction">만족도</string>

    <string name="text_used_service">이 서비스를 사용한 경험이 있나요?</string>
    <string name="text_appraisal_service">서비스를 이용해 본 느낌을 5점만점으로 평가해주세요</string>
    <string name="text_design_question">디자인은 어떤가요?</string>
    <string name="text_useful_question">서비스가 복잡하지는 않나요?</string>
    <string name="text_contents_question">유용한 정보 또는 기능이 있나요?</string>
    <string name="text_satisfaction_question">앞으로도 이 서비스를 사용할 생각이 있나요?</string>

    <string name="text_reivew_explanation">서비스에 대한 간단한 소감을 써주세요(30자 내) - 선택</string>
    <string name="text_hint_review_idea">좋은 서비스 아이디어입니다.</string>

    <string name="text_register_review_complete">리뷰가 정상적으로 등록되었습니다</string>

    <string name="text_error_no_write_review">내가 작성한 서비스에는 리뷰를 작성하실 수 없습니다.</string>

    <!--설정 닉네임 -->

    <string name="text_nickname">닉네임</string>
    <string name="text_hint_nickname">변경할 닉네임을 입력하세요</string>
    <string name="text_error_nickname">10자 이내 한글,영문,숫자만 사용가능합니다.(영문 대소문자 구분)</string>

    <!--내 페이지-->
    <string name="text_my_app">내가 등록한 서비스</string>
    <string name="text_my_review">내가 쓴 리뷰</string>
    <string name="text_signout">로그아웃</string>

    <string name="text_title_content">서비스 설명</string>
    <string name="text_title_register">등록하기</string>
    <string name="text_title_register_complete">등록 완료</string>
    <string name="text_title_write_review">리뷰 쓰기</string>
    <string name="text_title_register_review_complete">리뷰 쓰기 완료</string>

    <string name="action_confirm">확인</string>
    <string name="action_close">닫기</string>
    <string name="action_next">다음</string>
    <string name="action_cancel">취소</string>
    <string name="action_retry_connect">재시도</string>
    <string name="action_join_appraisal">평가 참여하기</string>
    <string name="action_app_down">앱 다운로드</string>
    <string name="action_write_review">평가 참여하기</string>
    <string name="action_app_register">서비스 추가등록</string>
    <string name="action_go_main">메인페이지로 이동</string>
    <string name="action_go_my_review">내가 작성한 리뷰 보기</string>
    <string name="action_register">제출하기</string>
    <string name="action_change_nickname">닉네임 변경</string>
    <string name="action_during_7_day">7일 동안</string>
    <string name="action_during_14_day">14일 동안</string>

    <!--로그인-->

    <string name="action_sign_google">Sign in with Google</string>
    <string name="action_sign_facebook">Sign in with Facebook</string>

    <!--메인-->

    <string name="action_main">메인</string>
    <string name="action_write">작성</string>
    <string name="action_my_info">내정보</string>


    <string name="_text_date">%1$s ~ %2$s</string>
    <string name="_text_review_count">%d명이 리뷰를 남겼습니다.</string>
    <string name="_text_content_review_count">%d명의 리뷰</string>
    <string name="_text_review_date">평가기간 : %1$s ~ %2$s</string>


</resources>
