<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff_ff"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="me.fourground.litmus.ui.signin.SignInActivity">

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/FontTypeFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/app_name"
        android:textColor="@color/blue_0090ff_ff"
        android:textSize="47sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_app_explanation"
        style="@style/FontTypeFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_app_explanation"
        android:textColor="@color/gray_a7a7a7_ff"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_login_explanation"
        style="@style/FontTypeFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_explanation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/text_login_explanation"
        android:textColor="@color/gray_a7a7a7_ff"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/sib_google"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_login_explanation"
        android:layout_marginTop="11dp"
        android:background="@drawable/selector_btn_google_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/selector_icon_google"/>

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_sign_google"
            android:textColor="@color/white_ffffff_ff"
            android:textSize="14sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sib_facebook"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/sib_google"
        android:layout_marginTop="11dp"
        android:background="@drawable/com_facebook_button_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="3dp"
            android:src="@drawable/com_facebook_button_login_logo"/>

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_sign_facebook"
            android:textColor="@color/white_ffffff_ff"
            android:textSize="14sp"/>
    </LinearLayout>


    <TextView
        style="@style/FontTypeFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/text_4ground_team_project"
        android:textColor="@color/gray_a7a7a7_ff"
        android:textSize="9sp"/>


</RelativeLayout>
