<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff_ff"
    android:orientation="vertical"
    tools:context="me.fourground.litmus.ui.main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blue_0090ff_ff"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e7e7e7_ff"/>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_app_evaluating"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_d7d7d7_ff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_ic_home"
                android:gravity="center"
                android:text="@string/action_main"
                android:textColor="@color/selector_main_tab_text_color"
                android:textSize="9sp"/>


        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="26dp"
            android:background="@color/gray_e7e7e7_ff"/>

        <RelativeLayout
            android:id="@+id/btn_write"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_ic_edit"
                android:gravity="center"
                android:text="@string/action_write"
                android:textColor="@color/selector_main_tab_text_color"
                android:textSize="9sp"/>


        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="26dp"
            android:background="@color/gray_d7d7d7_ff"/>

        <RelativeLayout
            android:id="@+id/btn_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_ic_person"
                android:gravity="center"
                android:text="@string/action_my_info"
                android:textColor="@color/selector_main_tab_text_color"
                android:textSize="9sp"/>


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
