<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="me.fourground.raisal.ui.mypage.nickname.MyNickNameActivity">

    <include layout="@layout/include_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/RegisterTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nickname"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_nickname"
            android.support.design:counterEnabled="true"
            android.support.design:counterMaxLength="10"
            android.support.design:errorTextAppearance="@style/ErrorAppearance"
            android.support.design:hintAnimationEnabled="true"
            android.support.design:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nickname"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_0090ff_ff"
        android:text="@string/action_register"
        android:textColor="@color/white_ffffff_ff"
        android:textSize="26sp"
        android:textStyle="bold"/>

</LinearLayout>