<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_review"
        style="@style/FontTypeFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="REVIEW"
        android:textColor="@color/black_272727_ff"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_design"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <TextView
            android:id="@+id/tv_design"
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="DESIGN"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="9dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="14dp"
            android:background="@color/gray_e7e7e7_ff"/>

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_useful"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <TextView
            android:id="@+id/tv_useful"
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="USEFUL"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="9dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="14dp"
            android:background="@color/gray_e7e7e7_ff"/>

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_contents"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <TextView
            android:id="@+id/tv_contents"
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="CONTENTS"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="9dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="14dp"
            android:background="@color/gray_e7e7e7_ff"/>

        <TextView
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_satisfaction"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

        <TextView
            android:id="@+id/tv_satisfaction"
            style="@style/FontTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="SATISFACTION"
            android:textColor="@color/gray_a7a7a7_ff"
            android:textSize="9sp"/>

    </LinearLayout>

</merge>